# Backend-Pytest

./: .dockerignore  .editorconfig  .gitignore  .gitmessage  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml  pytest.ini
.github/workflows/: test.yml
docs/: learning_log.md
src/: todo_app.py
src/api_client/: base.py
tests/: conftest.py
tests/public_api/: conftest.py  test_dummyjson_products.py  test_httpbin_basic.py  test_httpbin_status.py
tests/schemas/: dummyjson_product.schema.json
tests/todo_app/: test_todos.py
